Doesnt work yet, some functions still cause errors